*  Created function MemoryObjUse(), and associated helpfiles.  Eric Wu peer reviewed
*  Created function YearEnd(), and associated helpfiles.  Eric Wu peer reviewed
*  20/2/15 by EW - reviewed and fix mbie_footer.Rd
*  PE added some more countries to CountryGroup()
*  PE moved plyr and reshape to 'suggests'
*  PE removed all the Statplanet code and examples
*  PE deleted xlsx to R

mbie 0.8.8
*  Modified by  Antonia Milkop 17/9/14
*  Added mbie_footer to mbie package

mbie 0.8.7
*  Modified by Peter Ellis and Antonia Milkop 17/9/14
*  Added function animation_frames() to the {mbie} package, as well as associated helpfile

mbie 0.8.6
*  Modified by Antonia Milkop 13/8/14
*  Updated OneChina example to take out Country13 references as these are no longer applicable 
*  Added animation_frames() (Peter Ellis 10/9/14)

mbie 0.8.5
*  Modified by Antonia Milkop
*  Took out Country13 from CountryManip function
*  Added IVSweights_old to example(CountryGroup)
*  Updated the example in locations_2013.Rd with one that relates to the new IVS locations
* modified CountryGroup further so it can handle some more annoying And/and Of/of and uppercase countries issues (PE)

mbie 0.8.4 (peer reviewed by Jacob S)
*	Developed by Antonia Milkop
* 	CountryManip function has been changed.  Corrections made to the following Country classifications in IVSweights:
*	Brunei Darussalam (used to be defined as Rest of Americas, now defined as Rest of Asia);
*	Afghanistan (used to be defined as Africa and Middle East, now defined as Rest of Asia);
*	Maldives (used to be defined as Africa and Middle East, now defined as Rest of Asia);
*	Armenia (used to be defined as Rest of Europe, now defined as Rest of Asia);
*	St Helena (used to be defined as Rest of Americas, now defined as Africa and Middle East);
*	Falkland Islands (used to be defined as UK, now defined as Rest of Americas)
*  We have also kept a full list of country mappings called 'IVSweights_old' in the CountryManip function.  