@@ -2,7 +2,7 @@ Package: mbie
 Type: Package
 Title: Miscellaneous functions and data used by New Zealand Ministry of Business, Innovation and Employment
 Version: 0.8.9
-Date: 2015-01-30
+Date: 2015-03-18
 Author: Peter Ellis
 Maintainer: Antonia Milkop <antonia.milkop@mbie.govt.nz>
 Depends: R (>= 2.15.2), stats, tcltk, ggplot2, grid, scales, proto, zoo
